Minor fixed, increased z-index for multiple components, WIP iOS fixes for vc-text

--- a/src/main/less/vcomet/ui/vc-combobox/vc-combobox.less
+++ b/src/main/less/vcomet/ui/vc-combobox/vc-combobox.less
@@ -99,7 +99,7 @@
   .@{element}-dropdown {
     font-size: 16px;
     position: absolute;
-    z-index: 1;
+    z-index: 100;
     overflow: auto;
     width: 100%;
     max-height: 300px;
